--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "hardhat": "^2.12.3"
   },
   "dependencies": {
+    "@iexec/doracle": "^5.2.1-2",
     "@openzeppelin/contracts": "^4.8.0"
   }
 }
